# c_cpp

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  c_cpp  c_cpp.cbp  cmake_install.cmake  main  main.c
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
ci/travis/: install-linux.sh
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/c_cpp/: driver.h
lib/: CMakeCache.txt  Makefile  cmake_install.cmake  myDynamicLib.c  myDynamicLib.h  myStaticLib.c  myStaticLib.h  static.c  static.h
src/: driver.c  main.c
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  driver_unittest.cpp  work_tests.cpp  work_tests_tests
